Deleted property CustomerAddress from Claim.cs, from ViewModels and from Views

--- a/Sjuklöner/Views/Claims/ClaimDetails.cshtml
+++ b/Sjuklöner/Views/Claims/ClaimDetails.cshtml
@@ -110,7 +110,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col col-md-3">
+                    @*<div class="col col-md-3">
                         <div class="form-group line-height-12">
                             <div class="row label-padding">
                                 @Html.LabelFor(model => model.CustomerAddress, htmlAttributes: new { @class = "control-label-left-align col-md-12" })
@@ -119,7 +119,7 @@
                                 @Html.DisplayFor(m => m.CustomerAddress)
                             </div>
                         </div>
-                    </div>
+                    </div>*@
                     <div class="col col-md-3">
                         <div class="form-group line-height-12">
                             <div class="row label-padding">
