Step 2 in implementing support for multiple substitute assistants. More to come...

--- a/Sjuklöner/Content/Site.css
+++ b/Sjuklöner/Content/Site.css
@@ -896,8 +896,17 @@ li a {
 
 .selectedSubIndex {
     width: 40px;
-    display: none;
-    /*float: right;*/
+    /*display: none;*/
+}
+
+.selectedSubAssistant {
+    width: 200px;
+    /*display: none;*/
+}
+
+.selectedSubAssistantVal {
+    /*display: none;*/
+    font-weight: 100;
 }
 
 .display-inline-block {
@@ -905,7 +914,7 @@ li a {
 }
 
 .selecteditem {
-    display: none;
+    /*display: none;*/
     width: 15px;
     float: right;
 }
@@ -922,9 +931,19 @@ li a {
     margin-bottom: 0;
 }
 
+.label-align-top {
+    vertical-align: top;
+}
+
 .bold-14 {
     font-size: 14px;
     font-weight: bold;
+}
+
+.bold-14-2 {
+    font-size: 14px;
+    font-weight: bold;
+    text-align: right;
 }
 
 .bold-16 {
@@ -1017,6 +1036,7 @@ li a {
 
 .right-col-padding-42 {
     padding-right: 42px;
+    height: 36px;
 }
 
 .col-padding {
@@ -1284,6 +1304,10 @@ li a {
     text-align: left;
 }
 
+.no-padding-top{
+    padding-top: 0;
+}
+
 .no-padding-left3 {
     padding-left: -32px;
     margin-left: -32px;
@@ -1304,6 +1328,10 @@ li a {
 
 .padding-top-7 {
     padding-top: 7px;
+}
+
+.padding-top-10 {
+    padding-top: 10px;
 }
 
 .col-small-margin-left {
@@ -1343,6 +1371,10 @@ li a {
     /*padding: 0 4px;*/
     margin-top: -5px;
     font-size: 14px;
+}
+
+.row-margin {
+    margin-bottom: 12px;
 }
 
 .small-row-margin {
