--- a/Sjuklöner/Views/Claims/Create4.cshtml
+++ b/Sjuklöner/Views/Claims/Create4.cshtml
@@ -30,82 +30,91 @@
     </div>
     <div class="row">
         <div class="form-horizontal">
-            @*@Html.ValidationSummary(true, "", new { @class = "text-danger font-size-11" })*@
-
             <div class="row row-height-26">
-                @Html.LabelFor(model => model.SalaryAttachment, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col bold-14 label-align-top display-right-align col-md-2">
+                    Lönespecifikation, ordinarie assistent
+                </div>
                 <div class="col-md-10">
                     <input type="file" name="SalaryAttachment" id="SalaryAttachment" class="wide-input btn btn-default" />
                 </div>
             </div>
-            <div class="row row-height-14">
+            <div class="row row-height-14 row-margin">
                 <div class="col col-md-offset-2 col-md-10">
                     @Html.ValidationMessageFor(model => model.SalaryAttachment, "", new { @class = "text-danger font-size-11" })
                 </div>
             </div>
 
-            @*<div class="row row-height-26">
-                @Html.LabelFor(model => model.SalaryAttachmentStandIn, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    <input type="file" name="SalaryAttachmentStandIn" id="SalaryAttachmentStandIn" class="wide-input btn btn-default" />
-                </div>
-            </div>
-            <div class="row row-height-14">
-                <div class="col col-md-offset-2 col-md-10">
-                    @Html.ValidationMessageFor(model => model.SalaryAttachmentStandIn, "", new { @class = "text-danger font-size-11" })
-                </div>
-            </div>*@
-
             @if (Model.NumberOfSickDays > 7)
             {
-                <div class="row row-height-26">
-                    @Html.LabelFor(model => model.DoctorsCertificate, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        <input type="file" name="DoctorsCertificate" id="DoctorsCertificate" class="wide-input btn btn-default" />
-                    </div>
+            <div class="row row-height-26">
+                <div class="col bold-14 padding-top-10 display-right-align col-md-2">
+                    Läkarintyg
                 </div>
-                <div class="row row-height-14">
+                <div class="col-md-10">
+                    <input type="file" name="DoctorsCertificate" id="DoctorsCertificate" class="wide-input btn btn-default" />
+                </div>
+            </div>
+                <div class="row row-height-14 row-margin">
                     <div class="col col-md-offset-2 col-md-10">
                         @Html.ValidationMessageFor(model => model.DoctorsCertificate, "", new { @class = "text-danger font-size-11" })
                     </div>
                 </div>
             }
 
-            <div class="row row-height-26">
-                @Html.LabelFor(model => model.SickLeaveNotification, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    <input type="file" name="SickLeaveNotification" id="SickLeaveNotification" class="wide-input btn btn-default" />
+                <div class="row row-height-26">
+                    <div class="col bold-14 padding-top-10 display-right-align col-md-2">
+                        Sjukfrånvaroanmälan
+                    </div>
+                    <div class="col-md-10">
+                        <input type="file" name="SickLeaveNotification" id="SickLeaveNotification" class="wide-input btn btn-default" />
+                    </div>
                 </div>
-            </div>
-            <div class="row row-height-14">
+            <div class="row row-height-14 row-margin">
                 <div class="col col-md-offset-2 col-md-10">
                     @Html.ValidationMessageFor(model => model.SickLeaveNotification, "", new { @class = "text-danger font-size-11" })
                 </div>
             </div>
 
             <div class="row row-height-26">
-                @Html.LabelFor(model => model.TimeReport, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col bold-14 label-align-top display-right-align col-md-2">
+                    Tidsredovisning, ordinarie assistent
+                </div>
                 <div class="col-md-10">
                     <input type="file" name="TimeReport" id="TimeReport" class="wide-input btn btn-default" />
                 </div>
             </div>
-            <div class="row row-height-14">
+            <div class="row row-height-14 row-margin">
                 <div class="col col-md-offset-2 col-md-10">
                     @Html.ValidationMessageFor(model => model.TimeReport, "", new { @class = "text-danger font-size-11" })
                 </div>
             </div>
 
-            <div class="row row-height-26">
-                @Html.LabelFor(model => model.TimeReportStandIn, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    <input type="file" name="TimeReportStandIn" id="TimeReportStandIn" class="wide-input btn btn-default" />
+            @for (int i = 0; i < Model.NumberOfSubAssistants; i++)
+            {
+
+                <div class="row row-height-26">
+                    @if (Model.NumberOfSubAssistants == 1)
+                    {
+                        <div class="col-md-2 bold-14-2">
+                            Tidsredovisning, vikarierande assistent
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="col-md-2 bold-14-2">
+                            Tidsredovisning, vikarierande assistent @(i + 1)
+                        </div>
+                    }
+                    <div class="col col-md-10">
+                        <input type="file" name="TimeReportStandIn" id="TimeReportStandIn" class="wide-input btn btn-default" />
+                    </div>
                 </div>
-            </div>
-            <div class="row row-height-14">
-                <div class="col col-md-offset-2 col-md-10">
-                    @Html.ValidationMessageFor(model => model.TimeReportStandIn, "", new { @class = "text-danger font-size-11" })
+                <div class="row row-height-14 row-margin">
+                    <div class="col col-md-offset-2 col-md-10">
+                        @Html.ValidationMessageFor(model => model.TimeReportStandIn[i], "", new { @class = "text-danger font-size-11" })
+                    </div>
                 </div>
-            </div>
+            }
 
             <div class="row">
                 <div class="small-padding-left3 col col-md-offset-2 col-md-1">
@@ -119,9 +128,8 @@
                 </div>
                 <div class="small-padding-left3 col col-md-1">
                     @Html.ActionLink(Model.ClaimNumber, "_ShowClaim", new { refNumber = Model.ClaimNumber }, new { @class = "js-show-view-btn btn btn-secondary btn-secondary-small btn-left-margin-1" })
-                    @*<a type="button" class="btn btn-secondary btn-secondary-small btn-left-margin-5" href="#" id="loadPartialActionLink">@Model.ClaimNumber</a>*@
                 </div>
-                @*<div id="AJAXContainer"></div>*@
+
                 <div class="hidden-by-default" id="claimnumber">@Model.ClaimNumber</div>
                 <div id='myModal' class='modal' style="text-align:left;">
                     <div class="modal-dialog" style="width:70%; height:400px; padding:10px;">
@@ -168,19 +176,4 @@
             $('#myModal').modal('hide');
         });
     });
-
-    //$('#loadPartialActionLink').on('click', function (e) {
-    //    e.preventDefault();
-    //    var claimNumber = document.getElementById("claimnumber");
-    //    $.ajax({
-    //        type: "GET",
-    //        url: '/Claims/_ShowClaim',
-    //        data: {
-    //            refNumber: claimNumber.innerHTML
-    //        },
-    //        success: function (data, textStatus, jqXHR) {
-    //            $('#AJAXContainer').html(data);
-    //        }
-    //    });
-    //});
 </script>
